#44 Some cleanups